<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_main"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.frank.videosubtitle.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_home_to_progress"
            app:destination="@id/progressFragment" />
        <action
            android:id="@+id/action_home_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsFragment"
        android:label="@string/settings_title"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_settings_to_model"
            app:destination="@id/settingsModelFragment" />
        <action
            android:id="@+id/action_settings_to_translate"
            app:destination="@id/settingsTranslateFragment" />
        <action
            android:id="@+id/action_settings_to_language"
            app:destination="@id/settingsLanguageFragment" />
        <action
            android:id="@+id/action_settings_to_style"
            app:destination="@id/settingsStyleFragment" />
        <action
            android:id="@+id/action_settings_to_output"
            app:destination="@id/settingsOutputFragment" />
        <action
            android:id="@+id/action_settings_to_cache"
            app:destination="@id/settingsCacheFragment" />
        <action
            android:id="@+id/action_settings_to_threads"
            app:destination="@id/settingsThreadsFragment" />
    </fragment>

    <fragment
        android:id="@+id/settingsModelFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsModelFragment"
        android:label="@string/settings_section_model"
        tools:layout="@layout/fragment_settings_model" />

    <fragment
        android:id="@+id/settingsTranslateFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsTranslateFragment"
        android:label="@string/settings_section_translate"
        tools:layout="@layout/fragment_settings_translate" />

    <fragment
        android:id="@+id/settingsLanguageFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsLanguageFragment"
        android:label="@string/settings_section_language"
        tools:layout="@layout/fragment_settings_language" />

    <fragment
        android:id="@+id/settingsStyleFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsStyleFragment"
        android:label="@string/settings_section_style"
        tools:layout="@layout/fragment_settings_style" />

    <fragment
        android:id="@+id/settingsOutputFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsOutputFragment"
        android:label="@string/settings_section_output"
        tools:layout="@layout/fragment_settings_output" />

    <fragment
        android:id="@+id/settingsCacheFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsCacheFragment"
        android:label="@string/settings_section_cache"
        tools:layout="@layout/fragment_settings_cache" />

    <fragment
        android:id="@+id/settingsThreadsFragment"
        android:name="com.frank.videosubtitle.ui.settings.SettingsThreadsFragment"
        android:label="@string/settings_section_threads"
        tools:layout="@layout/fragment_settings_threads" />

    <fragment
        android:id="@+id/progressFragment"
        android:name="com.frank.videosubtitle.ui.progress.ProgressFragment"
        android:label="@string/progress_title"
        tools:layout="@layout/fragment_progress">
        <argument
            android:name="taskId"
            app:argType="string" />
        <action
            android:id="@+id/action_progress_to_editor"
            app:destination="@id/editorFragment" />
    </fragment>

    <fragment
        android:id="@+id/editorFragment"
        android:name="com.frank.videosubtitle.ui.editor.EditorFragment"
        android:label="@string/editor_title"
        tools:layout="@layout/fragment_editor">
        <argument
            android:name="taskId"
            app:argType="string" />
    </fragment>

</navigation>
